--- a/Ania Kubox/Bootcamp/HTML/index.html
+++ b/Ania Kubox/Bootcamp/HTML/index.html
@@ -12,6 +12,9 @@
     <h5>Hello, World!</h5>
     <h6>Hello, World!</h6>
 
+    <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio libero iusto, incidunt animi sit ratione quidem laudantium, accusamus consequatur cum pariatur, quia minus sunt repellat obcaecati ex accusantium? Iure, vero.</p>
+
     <p> <strong>I</strong> <b>am</b> <em>paragraph</em></p>
 
     <button class="hamburger" id="hamburger"></button>
