--- a/Ania Kubox/Bootcamp/Project/Portfolio/index.html
+++ b/Ania Kubox/Bootcamp/Project/Portfolio/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="src/style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"/>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="src/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&amp;display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/761e4c8e5c.js" crossorigin="anonymous"></script>
-    <title>Gnanavel Portfolio</title>
-    <meta charset="UTF-8" />
+    <title>Gnanavel Portfolio</title>  
   </head>
   <body>
 
@@ -17,17 +17,16 @@
         <li><a href="https://github.com/gnanavel229">GitHub</a></li>
         <li><a href="Pages/contact.html">Contact</a></li>
       </ul>
-      
     </nav>
     <!--Navbar Ending-->
 
     <!--Hero Staring-->
-        <div class="hero">
+    <div class="hero">
       <div class="hero-info">
-        <h1 id="name">Gnanavel</h1>
-        <p>I am a proffesional Software Developer and YouTuber. I love to teach anyone and everyone how to code.</p>
-        <div class="styled-break"></div>
-        <div class="button">Hire me</div>
+          <h1 id="name">Gnanavel</h1>
+          <p>I am a proffesional Software Developer and YouTuber. I love to teach anyone and everyone how to code.</p>
+          <div class="styled-break"></div>
+          <div class="button">Hire me</div>
       </div>
       <div>
         <img class="hero-image" src="src/images/working-illustration.png" alt="working illustration of a men"/>
