--- a/Try/CSS/1CSS/csscheatsheet/index.html
+++ b/Try/CSS/1CSS/csscheatsheet/index.html
@@ -45,6 +45,8 @@
         <div class="box-2">
             <h2>Bye there!</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae ex similique minus, at mollitia, velit expedita sed reprehenderit dolor laborum earum quo saepe doloremque quas. Quibusdam odit similique nisi ex consequatur. Nemo facere tempora commodi voluptatibus eaque, soluta odit ad quam labore veritatis accusantium ab molestiae quae laborum. Voluptate at expedita qui nobis facere fugit, cupiditate nostrum voluptatum quam minima id ullam distinctio natus. Consectetur expedita quia facere eveniet tempora.</p>
+
+            <a class="button" href="">Read More</a>
         </div>
         
         <div class="categories">
@@ -57,9 +59,45 @@
                 <li><a href="#">Categories 5</a></li>
             </ul>
         </div>
-    </div>
-    
-    <!--39:10--> to be continued
+
+        <form class="my-form">
+            <div class="form-group">
+                <label for="">Name: </label>
+                <input type="text" name="name" placeholder=" Enter your name">
+            </div>
+            <div class="form-group">
+                <label for="">Email: </label>
+                <input type="text" name="email" placeholder="Enter youremail">
+            </div>
+            <div class="form-group">
+                <label for="">Message: </label>
+                <textarea name="message" id="" cols="30" rows="10" placeholder="Enter the message"></textarea>
+            </div>
+            <div>
+                <input class="button" type="submit" name="name">
+            </div>
+        </form>
+
+        <div class="block">
+            <h3>Heading 1</h3>
+            <p class="p-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit nisi vel quae nam, velit voluptatibus voluptate deleniti explicabo placeat, alias eius beatae nobis tempore dicta nulla sed doloribus! Quisquam, ea.</p>
+        </div>
+
+        <div class="block">
+            <h3>Heading 2</h3>
+            <p class="p-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit nisi vel quae nam, velit voluptatibus voluptate deleniti explicabo placeat, alias eius beatae nobis tempore dicta nulla sed doloribus! Quisquam, ea.</p>
+        </div>
+
+        <div class="block">
+            <h3>Heading 3</h3>
+            <p class="p-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit nisi vel quae nam, velit voluptatibus voluptate deleniti explicabo placeat, alias eius beatae nobis tempore dicta nulla sed doloribus! Quisquam, ea.</p>
+        </div>
+
+        <!--54:09-->
+        <div class="clr"> <!--!!!????-->
+
+        </div>
+    </div>   
 
 </body>
 </html>
