--- a/Try/chill.html
+++ b/Try/chill.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head><meta charset="utf-8">
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 <style>
 /* Style the element with the id "myHeader" */
 #myHeader {
@@ -35,6 +37,12 @@
 
 <h2 class="city">Tokyo</h2>
 <p>Tokyo is the capital of Japan.</p>
+
+<div class="container">
+  <div class="item">Item 1</div>
+  <div class="item">Item 2</div>
+  <div class="item">Item 3</div>
+</div>
 
 </body>
 </html>
