--- a/Try/CSS/1CSS/csscheatsheet/index.html
+++ b/Try/CSS/1CSS/csscheatsheet/index.html
@@ -94,10 +94,15 @@
         </div>
 
         <!--54:09-->
-        <div class="clr"> <!--!!!????-->
+        <div class="clr"> <!--!!!????--> </div>
 
+        <div id="main-block">
+            <h3>Heading 3</h3>
+            <p class="pmainblock">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit nisi vel quae nam, velit voluptatibus voluptate deleniti explicabo placeat, alias eius beatae nobis tempore dicta nulla sed doloribus! Quisquam, ea.</p>
         </div>
-    </div>   
 
+        <div id="sidebar">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit nisi vel quae nam, velit voluptatibus voluptate deleniti explicabo placeat, alias eius beatae nobis tempore dicta nulla sed doloribus! Quisquam, ea.</p>
+        </div>
 </body>
 </html>
