--- a/Try/CSS/2CSS/1/index.html
+++ b/Try/CSS/2CSS/1/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>CSS Learing2</title>
-    <link rel="stylesheet" href="../2CSS/src/CSS/style.css">
+    <link rel="stylesheet" href="../1/src/css/style.css">
 </head>
 <body>
     <h1 class="title">My Website</h1>
@@ -10,7 +10,7 @@
 
     <h2 class="subtitle">About Me</h2>
 
-    <img src="../2CSS/src/images/image1.jpg" alt="">
+    <img src="../1/src/images/image1.jpg" alt="">
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat iure perferendis optio, adipisci vel quia. Assumenda dolores fugit ex sapiente odio asperiores culpa doloribus alias accusantium, provident cum accusamus iure consequatur neque cumque! Eligendi ullam ad tempore cum ea consectetur. </p>
 
@@ -32,7 +32,7 @@
         </thead>
 
         <tbody>
-            <tr>
+            <tr>x
                 <td>Sit</td>
                 <td>Amet</td>
                 <td>consectetur</td>
@@ -45,7 +45,7 @@
         </tbody>
     </table>
 
-    <img src="../2CSS/src/images/image2.jpg" alt="">
+    <img src="../1/src/images/image2.jpg" alt="">
 
     <h2 id="contact-us">Contact Us</h2>
 
