--- a/Try/CSS/2CSS/1/index.html
+++ b/Try/CSS/2CSS/1/index.html
@@ -8,6 +8,12 @@
     <h1 class="title">My Website</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, impedit cumque quidem consectetur tempora inventore distinctio natus provident vero quos!</p>
 
+    <p><b><a href="https://twitter.com/" target="_blank">This is a link</a></b></p>
+
+    <div>Hover over this div element to show the p element
+        <p id="tooltip">There! Here I am!</p>
+    </div>
+
     <h2 class="subtitle">About Me</h2>
 
     <img src="../1/src/images/image1.jpg" alt="">
@@ -32,7 +38,7 @@
         </thead>
 
         <tbody>
-            <tr>x
+            <tr>
                 <td>Sit</td>
                 <td>Amet</td>
                 <td>consectetur</td>
