--- a/Try/CSS/2CSS/2/index.html
+++ b/Try/CSS/2CSS/2/index.html
@@ -17,11 +17,15 @@
     <ul>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
         <li>Lorem ipsum dolor sit amet.</li>
-        <li>Lorem, ipsum dolor.</li>
+        <li>Lorem,ipsum dolor.</li>
+        <ol>
+            <li>My numbered list item</li>
+        </ol>
     </ul>
 
     <h2 class="subtitle" id="services" style="color: steelblue">Services</h2>
 
+    <a href="http://www.twitter.com" target="_blank" id="twitter-link">Click here to go to twitter</a>
     <table border="1">
         <thead>
             <tr>
@@ -53,8 +57,8 @@
         <input type="text" placeholder="Full Name">
         <input type="email" placeholder="Email">
         <textarea></textarea>
-        <button>Submit</button>
+        <button>Upload</button>
     </form>
-
+    <button>Submit</button>
 </body>
 </html>
