--- a/Try/HTML/2HTML/blog.html
+++ b/Try/HTML/2HTML/blog.html
@@ -43,7 +43,7 @@
             <h3>Blog Post One</h3>
             <small> Posted by Brad on Dec 13th </small>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam tenetur voluptatibus exercitationem, culpa aut nemo odio eveniet molestiae perferendis illum consequatur voluptate quia eos sint velit magnam dignissimos beatae eligendi quas voluptatum fugiat dolore! Deleniti harum velit asperiores aliquid tenetur ullam, error fugit soluta obcaecati temporibus veritatis quaerat, facere aliquam cupiditate quidem!</p>
-            <a href="">Read More</a>
+            <a href="#">Read More</a>
         </article>
 
         <!--Article2-->
