--- a/Try/CSS/2CSS/3/index.html
+++ b/Try/CSS/2CSS/3/index.html
@@ -49,6 +49,14 @@
         </tbody>
     </table>
 
+    <!--!important(CSS)-->
+    <p>Standard button: <a class="button" href="default.asp">CSS Tutorial</a></p>
+
+    <div id="myDiv">
+    <p>A link text inside myDiv: <a href="/html/">HTML Tutorial</a></p>
+    <p>A link button inside myDiv: <a href="/html/" class="button">HTML Tutorial</a></p>
+    </div>
+
     <img src="../1/src/images/image2.jpg" alt="">
 
     <h2>Contact Us</h2>
